--- a/src/style/Home.scss
+++ b/src/style/Home.scss
@@ -202,6 +202,7 @@
 	}
 }
 
+
 .partnerSchemeSlider{
 	margin-bottom: 100px;
 	.title{
@@ -212,9 +213,31 @@
 		max-height: 400px;
 		object-fit: cover;
 		overflow: hidden;
+		position: relative;
 		img{
 			width: 100%;
 			height: 100%;
+		}
+		.sliderContents{
+			position: absolute;
+			top: 0;
+			width: 100%;
+			height: 100%;
+			background-color: rgba(0,0,0,.6);
+			.sliderBannerText{
+				width: 50%;
+				position: absolute;
+				top: 30%;
+				left: 10%;
+				color: white;
+				.title{
+					text-align: start;
+					margin-bottom: 25px;
+				}
+				.p-content{
+					margin-bottom: 25px;
+				}
+			}
 		}
 	}
 }
@@ -326,7 +349,7 @@
 			background-color: $color_yellow;
 			border-radius: 50%;
 			cursor: pointer;
-			opacity: .8;
+			// opacity: .8;
 			animation: ripple 0.7s linear infinite;
 		}
 		.bi{
@@ -361,7 +384,43 @@
 				0 0 0 5px rgba($color_yellow, 0.3),
 				0 0 0 15px rgba($color_yellow, 0),
 			}
+		}
+
+		.showCard{
+			top:120%;
+			position: absolute;
+			border: 1px solid white;
+			background-color: white;
+			border-radius: 12px;
+			width: 200px;
+			z-index: 2;
+			img{
+				padding: 15px 15px 0;
+				width: 100%;
+				height: 170px;
+				object-fit: cover;
 			}
+			.square{
+				position: absolute;
+				transform: translate(-50%);
+				top: -15px;
+				left: 50%;
+				z-index: -1;
+				width: 0;
+				height: 0;
+				border-left: 10px solid transparent;
+				border-right: 10px solid transparent;
+				border-bottom: 18px solid white;
+			}
+			.primary-btn{
+				@include primaryButton(auto, #FFDE2E, #17344a);
+				transform: translate(54%);
+				margin: 6px 0 8px;
+			}
+		}
+		.hide{
+			display: none;
+		}
 	}
 
 	.scheme-text {
