--- a/src/style/Cart.scss
+++ b/src/style/Cart.scss
@@ -19,18 +19,17 @@
   }
 
   .strong{
-    font-weight:500;
+    font-weight:700;
     font-size: 16px;
     line-height: 24px;
     color: #111111;
   }
   .soft-text{
-    font-weight:400;
+    font-weight:500;
     font-size: 15px;
-    line-height:28px;
     color: #707072;
+    line-height: 20px;
   }
-
 
   .pointer-disable{
     pointer-events:none;
@@ -60,13 +59,17 @@
           .item-flex-details{
             display: flex;
             justify-content: space-between;
+
+            .strong{
+              margin-bottom: 4px;
+            }
           }
 
           .action-buttons{
             display: flex;
             justify-content: space-between;
             width: 100%;
-            margin: 12px 0;
+            margin-top: 12px;
 
             .quantity{
               display: flex;
