--- a/src/style/checkout.scss
+++ b/src/style/checkout.scss
@@ -1,111 +1,195 @@
-// @import "color";
-
+@import 'color';
 .checkout{
-    display: grid;
-    grid-template-columns: 49% 49%;
-    gap:2%;
-    max-width: 1400px;
-    margin: 70px auto;
-    width: 100%;
+  max-width: 1400px;
+  width: 100%;
+  margin: 70px auto;
+  padding: 0 15px;
+  display: grid;
+  grid-template-columns: 46% 40%;
+  justify-content: space-around;
 
-    input{
-      margin-bottom: 25px;
+  .checkout-title{
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 29px;
+    color:#111111;
+    margin-bottom: 30px;
+
+    .bi{
+      color: $color_yellow;
     }
+  }
 
-    .checkout-form {
-        display: grid;
-        grid-template-columns: 30% 70%;
-        grid-gap: 10px;
-        margin: 20px;
+  .strong{
+    font-weight:700;
+    font-size: 16px;
+    line-height: 24px;
+    color: #111111;
+  }
+  .soft-text{
+    font-weight:500;
+    font-size: 15px;
+    color: #707072;
+    line-height: 20px;
+  }
+
+  .cart-underline {
+    border-bottom: 1px solid #707072;
+    margin: 18px 0;
+  }
+
+  .order-summery{
+    position: sticky;
+    top: 120px;
+    height: fit-content;
+    .cart-items{
+      .cart-underline{
+        margin: 14px 0;
+        opacity: .4;
       }
-      
-      .checkout-form label {
-        grid-column: 1;
-        padding: 10px;
-      }
-      
-      .checkout-form input {
-        grid-column: 2;
-        padding: 10px;
-        border: none;
-        border-bottom: 1px solid #ccc;
-        outline: none;
-        
-        &:focus, &:valid{
-          border-bottom: 1px solid black;
+      .item{
+        width: 100%;
+        display: flex;
+        gap: 18px;
+        img{
+          max-width: 90px;
+          width: 100%;
+          aspect-ratio: 1/1;
+          height: auto;
+          object-fit: cover;
         }
-      }
-      
-      .checkout-form button {
-        grid-column: 2;
-        padding: 10px;
-        background-color: #007bff;
-        color: white;
-        border: none;
-        cursor: pointer;
-      }
-      
-      .checkout-form button:hover {
-        background-color: #0056b3;
-    }
 
-    .info{
-          
-          .order-summary {
+        .item-details{
+          width: 100%;
+          .item-flex-details{
             display: flex;
-            flex-direction: column;
-            align-items: center;
-            margin: 20px;
-            padding: 20px;
-            // border: 1px solid #ccc;
-            border-radius: 5px;
-            // background-color: #f5f5f5;
+            justify-content: space-between;
+
+            .strong{
+              margin-bottom: 4px;
+            }
           }
-          
-          .order-summary__content {
-            display: flex;
-            flex-direction: column;
-            align-items: flex-start;
-            width: 100%;
-          }
-          
-          .order-summary__row {
+
+          .action-buttons{
             display: flex;
             justify-content: space-between;
             width: 100%;
-            margin-bottom: 20px;
+            margin-top: 12px;
+
+            .quantity{
+              display: flex;
+              align-items: center;
+              .bi{
+                border: 1px solid black;
+                padding: 2px 4px;
+                border-radius: 50%;
+                cursor: pointer;
+                margin: 0 12px;
+              }
+            }
+
+            .primary-btn{
+              color: #17344a;
+              float: bottom;
+              font-size: 14px;
+            }
           }
-          
-          .order-summary__label {
-            font-weight: bold;
-          }
-          
-          .order-summary__value {
-            font-weight: normal;
-          }
-          
-          .order-summary__coupon-input {
-            width: 50%;
-            padding: 5px;
-            border: none;
-            border-bottom: 1px solid #ccc;
-            outline: none;
-          }
-          .order-summary__coupon-input:focus{
-            border-color:black;
-          }
-          
-          .order-summary__button {
-            padding: 8px 18px;
-            border: none;
-            border-radius: 5px;
-            background-color: #FCD107;
-            color: #17344a;
-            cursor: pointer;
-            margin-right: 5px;
-          }
-          .order-summary__agreement-checkbox{
-            margin-right: 12px;
-          }
+
+        }
+      }
     }
+    .cart-total{
+      margin: 0 12px;
+      .strong{
+        font-size: 18px;
+        margin-bottom: 6px;
+        span{
+          float: right;
+        }
+      }
+      .cart-underline{
+        margin: 12px 0;
+      }
+    }
+  }
+
+  .address-payment{
+    .address{
+      .pin {
+        margin-bottom: 12px;
+        span{
+          float: right;
+        }
+      }
+      .address-details{
+        margin-bottom: 12px;
+        p{
+          margin-bottom: 4px;
+        }
+      }
+  
+      .edit-add-address{
+        a{
+          color: $color_yellow;
+          text-decoration: underline;
+        }
+      }
+    }
+  
+    .payment{
+      margin-top: 30px;
+  
+      .coupen{
+        p{
+          margin-bottom: 6px;
+        }
+        .coupen-input{
+          display: flex;
+          align-items: center;
+          margin-bottom: 16px;
+          width: 100%;
+          input{
+            width: 70%;
+            font-size: 16px;
+            padding: 4.5px;
+            outline: none;
+            border:1px solid $color_yellow;
+          }
+          .primary-btn{
+            width: 20%;
+            color: $color_black_2;
+            &:hover{
+              border-radius: initial;
+            }
+          }
+        }
+      }
+      
+      .payment-methods{
+        form{
+          .payment-input{
+            margin: 12px 0;
+            font-size: 18px;
+
+            label{
+              padding: 0 12px;
+              cursor: pointer;
+            }
+          }
+          .primary-btn{
+            font-size: 16px;
+            font-weight: 500;
+            float: right;
+            text-transform: uppercase;
+            width: 30%;
+            // color: $color_black_2;
+            margin: 25px 0;
+          }
+        }
+
+      }
+
+    }
+  }
+
 }
