--- a/src/style/Header.scss
+++ b/src/style/Header.scss
@@ -8,9 +8,12 @@ nav {
 	background-color: $background-color_white;
 	z-index: 50;
 	padding: 16px 0;
-	box-shadow: rgba(0, 0, 0, 0.03) 0px 4px 6px -1px, rgba(0, 0, 0, 0.03) 0px 2px 4px -1px;
-
 	
+	.shadow{
+		// box-shadow: rgba(0, 0, 0, 0.03) 0px 4px 6px -1px, rgba(0, 0, 0, 0.03) 0px 2px 4px -1px;
+
+		box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
+	}
 
 	.searchBar{
 		position: absolute;
