--- a/src/style/Blogs.scss
+++ b/src/style/Blogs.scss
@@ -1,3 +1,5 @@
+@import 'color';
+
 .blogs-container {
     max-width: 1300px;
     width: 100%;
@@ -311,4 +313,101 @@
           }
         }  
     }      
+}
+
+.blog-single-container{
+  max-width: 1300px;
+  width: 100%;
+  margin: 30px auto;
+  .blog-content{
+    margin-bottom: 105px;
+    .underline{
+      margin: 35px 0;
+      border-bottom: 1px solid black;
+      opacity: .5;
+    }
+
+    .blog-image img{
+      width: 100%;
+      height: 500px;
+      object-fit: cover;
+
+    }
+
+    .blog-content{
+      max-width: 1000px;
+      width: 100%;
+      margin: 40px auto;
+      text-align: center;
+
+      .categories{
+        display: flex;
+        justify-content: center;
+        margin-bottom: 25px;
+        .primary-btn{
+          color: $color_black_2;
+          width: 120px;
+          margin: 0 20px;
+
+          &:hover{
+            color: $color_yellow;
+            background-color: $color_black_2;
+          }
+        }
+      }
+
+      .soft-text{
+        opacity: .8;
+        font-weight: 400;
+      }
+
+      .title{    
+        font-weight:500;
+        font-size:50px;
+        line-height: 60px;
+        margin: 15px 0;
+      }
+
+      .content{
+        .p-header{
+          // text-align: center !important;
+          font-weight:300;
+          font-size: 34px;
+          line-height: 40px;
+          margin:25px 0;
+        }
+
+        .p-content{
+          text-align: justify;
+          opacity: .8;
+          font-weight: 400;
+          margin-bottom: 12px;
+        }
+      }
+
+      .image-content{
+        margin: 35px 0;
+        display: grid;
+        grid-template-columns: 49% 49%;
+        gap: 2%;
+
+        img{
+          width: 100%;
+          height: 90%;
+          object-fit: cover;
+        }
+      }
+
+      .quot{
+        border-left: 2px solid black;
+        padding: 12px 35px;
+        margin-bottom: 25px;
+        .p-content{
+          font-weight: 400;
+          font-size: 22px;
+          text-align: justify;
+        }
+      }
+    }
+  }
 }
