--- a/src/style/checkout.scss
+++ b/src/style/checkout.scss
@@ -131,8 +131,11 @@
       .edit-add-address{
         a{
           color: $color_yellow;
-          text-decoration: underline;
+          &:hover{
+            text-decoration: underline;
+          }
         }
+
       }
     }
   
@@ -176,14 +179,26 @@
               cursor: pointer;
             }
           }
-          .primary-btn{
-            font-size: 16px;
-            font-weight: 500;
-            float: right;
-            text-transform: uppercase;
-            width: 30%;
-            // color: $color_black_2;
+          .allow-payment{
+            width: 100%;
             margin: 25px 0;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            
+            .primary-btn{
+              font-size: 16px;
+              font-weight: 500;              
+              text-transform: uppercase;
+              width: 30%;
+            }
+            .warning{
+              opacity: 0;
+            }
+            .warning-show{
+              opacity: 1;
+              color: red;
+            }
           }
         }
 
