--- a/src/style/Header.scss
+++ b/src/style/Header.scss
@@ -11,8 +11,8 @@ nav {
 	
 	.shadow{
 		// box-shadow: rgba(0, 0, 0, 0.03) 0px 4px 6px -1px, rgba(0, 0, 0, 0.03) 0px 2px 4px -1px;
-
-		box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
+		box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
+		// box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
 	}
 
 	.searchBar{
