--- a/src/style/Footer.scss
+++ b/src/style/Footer.scss
@@ -3,14 +3,14 @@
 $color_2: #44332B;
 
 footer {
-	background-color: $background-color_white;
+	background-color: $color_yellow;
 }
 .footer-contents {
 	max-width: 1440px;
 	margin: auto;
 	padding: 45px 15px 45px;
 	display: grid;
-	grid-template-columns: 25% 25% 25% 25%;
+	grid-template-columns: 22% 22% 22% 34%;
 	.about-us {
 		padding: 0 15px;
 	}
@@ -19,6 +19,7 @@ footer {
 		font-weight: 600;
 		line-height: 1;
 		margin: 29px;
+		color: $color_black_2;
 	}
 	p {
 		margin: 6px 29px;
@@ -26,13 +27,14 @@ footer {
 	a {
 		color: $color_black_2;
 		text-decoration: none;
+		transition:all .2s ease;
 		&:hover {
-			color: $color_yellow;
+			color: white;
 		}
 	}
 	.social-media {
 		.media-icons {
-			width: 70%;
+			width: 50%;
 			margin: 12px 29px;
 			display: flex;
 			flex-direction: row;
