--- a/src/style/Home.scss
+++ b/src/style/Home.scss
@@ -77,11 +77,9 @@
 				margin-bottom: 20px;
 				margin-top: 0;
 			}
-			a {
-				font-size: 14px;
-				font-weight: 700;
-				padding: 0;
-				color: $color_yellow;
+			.primary-btn{
+				color: $color_black_2;
+				font-weight: 600;
 			}
 		}
 		&:hover {
@@ -189,16 +187,43 @@
 	width: 100%;
 	border-top: 4px solid $color_yellow;
 	border-bottom: 4px solid $color_yellow;
-	padding: 25px 0;
+	padding: 60px 0;
 	margin-bottom: 80px;
+	position:relative;
 	.uspCards{
-		max-width: 1200px;
+		max-width: 1300px;
 		width: 100%;
+		gap: 8%;
 		margin: auto;
+		.usp{
+			text-align: center;
+			
+			.bi{
+				font-size: 35px;
+				margin:40px ;
+			}
+
+			.usp-title{
+				font-weight:500;
+				font-size:18px;
+				line-height: 22px;
+				margin: 16px 0;
+			}
+			.usp-text{
+				font-weight: 400;
+				font-size:14px;
+				line-height: 24px;
+				color:#666666;
+			}
+		}
 	}
 	.title {
-		text-align: center;
-		margin-bottom: 25px;
+		position: absolute;
+		top: -8%;
+		left: 50%;
+		transform: translate(-50%);
+		background-color: white;
+		padding: 0 18px;
 	}
 }
 
