--- a/src/style/Product-single.scss
+++ b/src/style/Product-single.scss
@@ -11,7 +11,7 @@
     .product{
         max-width: 1300px;
         width: 100%;
-        margin: 70px auto;
+        margin: 70px auto 120px;
         display: grid;
         grid-template-columns: 62% 35%;
         gap: 3%;
@@ -69,37 +69,30 @@
                     display: flex;
                     margin: 10px 0;
                     gap: 8px;
-                    .quantity-count{
-                        border: 1px solid #666666;
-                        padding: 0 12px;
-                        text-align: center;
-                        color: $color_black_2;
-                        width: 130px;
-                        display: flex;
-                        justify-content: space-between;
-                        align-items: center;
-                        .bi{
-                            cursor: pointer;
-                        }
-                    }
 
                     .add-cart{
-                        width: 100%;
+                        width: 50%;
                         color: $color_black_2;
                         font-size: 16px;                    
                         font-weight: 500;
                         padding: 12px 16px;
                     }
                     .wishlist{
+                        cursor: pointer;
                         align-items: center;
-                        width: 75px;
+                        width: 50%;
                         border: 1px solid black;
                         text-align: center;
                         display: flex;
                         justify-content: center;
                         align-items: center;
+                        transition: all .3s ease;
                         .bi{
                             font-size: 20px;                        
+                        }
+
+                        &:hover{
+                            border-radius: 25px;
                         }
                     }
                 }
@@ -141,13 +134,31 @@
 
     .product-image{
         .image-carousel{
-
-        }
-        .main-image{
             img{
                 width: 100%;
                 object-fit: cover;
             }
+            .main-img{
+                img{
+                    height: 450px;
+                }
+            }
+            .thumb-img{
+                width: 90%;
+                padding: 12px;
+                cursor: pointer;
+                img{
+                    width: 100%;
+                    height: 80px;
+                    transition: all .4s ease;
+
+                    &:hover{
+                        box-shadow: rgba(252,209,7, 0.95) 0px 0px 10px;
+                    }
+                }
+                
+            }
         }
+            
     }
 }
